compiler/lume_hir/src/snapshots/lume_hir__lower__tests__implicit_imports@Int8.snap
---
source: compiler/lume_hir/src/lower.rs
description: "fn foo() -> Int8 { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: std::Int8,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:17:20,
                    },
                ),
                location: <internal>:0:20,
            },
        ),
    },
    statements: {},
    expressions: {},
}
