compiler/lume_hir/src/snapshots/lume_hir__lower__tests__implicit_imports@IntPtr.snap
---
source: compiler/lume_hir/src/lower.rs
description: "fn foo() -> IntPtr { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: std::IntPtr,
                        type_params: [],
                        location: <internal>:12:18,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:19:22,
                    },
                ),
                location: <internal>:0:22,
            },
        ),
    },
    statements: {},
    expressions: {},
}
